--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -47,13 +47,88 @@ knitr::kable(
 
 ## Describtion of Variable
 
+Based on these outputs, we can find that the raw data has the following 34 columns and 299 rows:
+
+`Code of origin`: the region and code of each country, represented by 4 digit
+
+`Place of origin`: the name of the continent and country researched.
+
+`1949/50`: the number of international students in US in Academic Year 1949 - 1950
+
+`1954/55`: the number of international students in US in Academic Year 1954 - 1955 
+
+`1959/60`: the number of international students in US in Academic Year 1959 - 1960
+
+`1964/65`: the number of international students in US in Academic Year 1964 - 1965
+
+`1969/70`: the number of international students in US in Academic Year 1969 - 1970
+
+`1974/75`: the number of international students in US in Academic Year 1974 - 1975
+
+`1979/80`: the number of international students in US in Academic Year 1979 - 1980
+
+`1984/85`: the number of international students in US in Academic Year 1984 - 1985
+
+`1989/90`: the number of international students in US in Academic Year 1989 - 1990
+
+`1994/95`: the number of international students in US in Academic Year 1994 - 1995
+
+`1999/00`: the number of international students in US in Academic Year 1999 - 2000
+
+`2000/01`: the number of international students in US in Academic Year 2000 - 2001
+
+`2001/02`: the number of international students in US in Academic Year 2001 - 2002
+
+`2002/03`: the number of international students in US in Academic Year 2002 - 2003
+
+`2003/04`: the number of international students in US in Academic Year 2003 - 2004
+
+`2004/05`: the number of international students in US in Academic Year 2004 - 2005
+
+`2005/06`: the number of international students in US in Academic Year 2005 - 2006
+
+`2006/07`: the number of international students in US in Academic Year 2006 - 2007
+
+`2007/08`: the number of international students in US in Academic Year 2007 - 2008
+
+`2008/09`: the number of international students in US in Academic Year 2008 - 2009
+
+`2009/10`: the number of international students in US in Academic Year 2009 - 2010
+
+`2010/11`: the number of international students in US in Academic Year 2010 - 2011
+
+`2011/12`: the number of international students in US in Academic Year 2011 - 2012
+
+`2012/13`: the number of international students in US in Academic Year 2012 - 2013
+
+`2013/14`: the number of international students in US in Academic Year 2013 - 2014
+
+`2014/15`: the number of international students in US in Academic Year 2014 - 2015
+
+`2015/16`: the number of international students in US in Academic Year 2015 - 2016
+
+`2016/17`: the number of international students in US in Academic Year 2016 - 2017
+
+`2017/18`: the number of international students in US in Academic Year 2017 - 2018
+
+`2018/19`: the number of international students in US in Academic Year 2018 - 2019
+
+`2019/20`: the number of international students in US in Academic Year 2019 - 2020
+
+`2020/21`: the number of international students in US in Academic Year 2020 - 2021
 
 <br>
 
+
 ## Issue of Data set
 
+### For missing Value
+
+There are a lot of NAs in the dataset, but there are some that do not make sense. Because the data source is in Excel format and separating it with blank lines is a common Excel method.
 
 
+### For Place of Origin
+The format for countries and continents is not uniform. So, we have to modify it to the same format before analysis.
 
 
 
