--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -117,7 +117,7 @@ pivot_longer(c("1949/50", "1954/55", "1959/60", "1964/65", "1969/70", "1974/75",
 ## What the number of international students and growth trend in 20 century and 21 century
 
 ### Total number of international students study in the U.S. in different century
-```{r}
+```{r ch5plot1}
 tidysum <- df.tidy %>%
   select(`Place of Origin`, Continents, Academic_year, student_numbers, century) %>%
   group_by(Continents, century) %>%
@@ -150,7 +150,7 @@ ggplot(tidysum, aes(x = Continents, y = student_numbers)) +
 
 ### trend of international students study in the U.S. in different century
 
-```{r}
+```{r ch5plot2}
 draw.totalnum <- function(c){
   tidytotal.num <- df.tidy %>%
     select(`Place of Origin`, Continents, Academic_year, student_numbers, century) %>%
@@ -187,7 +187,7 @@ annotate_figure(pt,
 
 ### The largest increase in the total number of students per country/region in two centuries on the continent
 
-```{r}
+```{r ch5plot3}
 tidysum.asia <- df.tidy %>%
   select(`Place of Origin`, Continents, Academic_year, student_numbers, century) %>%
   filter(Continents == "Asia") %>%
