--- a/07-conclusion.Rmd
+++ b/07-conclusion.Rmd
@@ -7,7 +7,7 @@ Since 2020, the number of international students in the U.S. from around the wor
 
 Of course, international students around the world continue to value U.S. higher education, and we collectively expect a significant increase in the number of international students when pendemic is over.
 
-In addition, when we looked at the top 10 countries in terms of decrease in international students in the U.S. during COVID-19, showed that Denmark as the country with the largest change in the number of international students in the U.S. since the 2000/01 academic year. It also saw a precipitous drop in headcount change from 2019.
+In addition, when we looked at the top 10 countries in terms of decrease in international students in the U.S. during COVID-19, showed that Denmark as the country with the largest change in the number of international students in the U.S. since the 2000/01 academic year. It also saw a precipitous drop in headcount change from year 2019.
 
 <br>
 
